[package]
name = "lurk-parse"
version = "0.1.0"
edition = "2021"

[dependencies]
lurk = { version = "0.1", git = "https://github.com/lurk-lang/lurk-rs.git", rev = "0f9a0b3ab0c04e0b4aa34414c10f4495c6e47755" }
nom = "7.1.0"
nom_locate = "4.0.0"
multibase = { version = "0.9.1", default-features = false }
base-x = { version = "0.2.8", default-features = false }
num-bigint = { version = "0.4.3", default-features = false }
ff = "0.11.0"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
blstrs = "0.4.2"
rand = "0.8"
